--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 requests = "*"
 bs4 = "*"
+twine = "*"
+setuptools = "*"
+wheel = "*"
 
 [requires]
 python_version = "3.7"
